--- a/app/src/main/res/layout/find_info.xml
+++ b/app/src/main/res/layout/find_info.xml
@@ -8,13 +8,12 @@
         android:id="@+id/edtInput"
         android:layout_width="180dp"
         android:layout_height="50dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
-        android:background="@color/black"
-        android:gravity="center"
-        android:inputType="number"
-        android:hint="поиск"
+        android:background="@drawable/roundstyle"
         android:drawableStart="@android:drawable/ic_menu_edit"
+        android:gravity="center"
+        android:hint="поиск"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="15sp"
@@ -28,7 +27,7 @@
         android:layout_marginHorizontal="30dp"
         android:width="110dp"
         android:height="50dp"
-        android:background="@color/black"
+        android:background="@drawable/roundstyle"
         android:gravity="center"
         android:text="Найти"
         android:drawableLeft="@android:drawable/ic_search_category_default"
@@ -37,5 +36,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/edtInput"
         app:layout_constraintTop_toTopOf="@+id/edtInput" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvUsers"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="20dp"
+        android:orientation="vertical"
+        app:layout_goneMarginTop="10dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edtInput" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
