--- a/app/src/main/res/layout/progress_bar_alert.xml
+++ b/app/src/main/res/layout/progress_bar_alert.xml
@@ -13,6 +13,7 @@
         android:layout_height="50dp"
         android:layout_marginStart="30dp"
         android:layout_marginEnd="10dp"
+        android:indeterminateDrawable="@drawable/progress"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/progressBarAlert"
         app:layout_constraintTop_toTopOf="parent"
