--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="light_blue">#7986CB</color>
+    <color name="red">#EF0404</color>
+    <color name="green">#3EDA09</color>
+    <color name="blue">#051EBD</color>
+    <color name="yellow">#FFF400</color>
 </resources>
