--- a/app/src/main/res/layout/find_info.xml
+++ b/app/src/main/res/layout/find_info.xml
@@ -12,6 +12,7 @@
         android:layout_marginTop="20dp"
         android:background="@drawable/roundstyle"
         android:drawableStart="@android:drawable/ic_menu_edit"
+        android:paddingStart="10dp"
         android:gravity="center"
         android:hint="поиск"
         android:textColor="@color/white"
@@ -25,11 +26,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="30dp"
-        android:width="110dp"
+        android:width="120dp"
         android:height="50dp"
         android:background="@drawable/roundstyle"
         android:gravity="center"
         android:text="Найти"
+        android:paddingStart="5dp"
         android:drawableLeft="@android:drawable/ic_search_category_default"
         android:textColor="@color/white"
         android:textSize="20sp"
