--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:type="linear"
-        android:angle="90"
-        android:startColor="#15ECA8"
-        android:endColor="#115ede" />
+        android:angle="270"
+        android:startColor="@color/teal_200"
+        android:endColor="@color/purple_500" />
 </shape>
