--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:gravity="center"
         android:inputType="number"
         android:hint="Количество"
+        android:paddingStart="10dp"
         android:drawableStart="@android:drawable/ic_menu_edit"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
