--- a/app/src/main/res/layout/user_full_information.xml
+++ b/app/src/main/res/layout/user_full_information.xml
@@ -35,7 +35,7 @@
     <RadioGroup
         android:id="@+id/radioGroup"
         android:orientation="vertical"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/tvFullName"
         app:layout_constraintStart_toStartOf="parent"
