--- a/app/src/main/res/drawable/gradient.xml
+++ b/app/src/main/res/drawable/gradient.xml
@@ -3,6 +3,6 @@
     <gradient
         android:type="linear"
         android:angle="270"
-        android:startColor="@color/teal_200"
-        android:endColor="@color/purple_500" />
+        android:startColor="@color/gradientTop"
+        android:endColor="@color/gradientBottom" />
 </shape>
