--- a/app/src/main/res/drawable/roundstyle.xml
+++ b/app/src/main/res/drawable/roundstyle.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <corners android:radius="12dp" />
+    <corners android:radius="15dp" />
 xmlns:android="http://schemas.android.com/apk/res/android">
         <gradient
             android:type="linear"
             android:angle="270"
-            android:startColor="#15ECA8"
-            android:endColor="#115ede" />
+            android:startColor="@color/gradientTop"
+            android:endColor="@color/gradientBottom" />
 
 </shape>
