implemented nav component

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,6 @@
     <color name="gradientTop">#15ECA8</color>
     <color name="gradientBottom">#115ede</color>
     <color name="gray">#00ffffff</color>
+    <color name="light_gray">#99a7b3c6</color>
 
 </resources>
