--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -11,16 +11,20 @@
         android:label="HomeFragment" >
         <action
             android:id="@+id/action_homeFragment_to_findInfoFragment2"
-            app:destination="@id/findInfoFragment2" />
-        <argument
-            android:name="UserFullInformation"
-            app:argType="space.mel.getusersapp.data.Result" />
-        <action
-            android:id="@+id/action_homeFragment_to_userFullInformationFragment2"
-            app:destination="@id/userFullInformationFragment2" />
+            app:destination="@id/findInfoFragment2"
+            app:enterAnim="@animator/nav_default_enter_anim"
+            app:exitAnim="@animator/nav_default_exit_anim" />
         <argument
             android:name="FindInfo"
             app:argType="space.mel.getusersapp.data.Result" />
+
+        <action
+            android:id="@+id/action_homeFragment_to_userFullInformationFragment2"
+            app:destination="@id/userFullInformationFragment2"
+            app:enterAnim="@animator/nav_default_enter_anim"
+            app:exitAnim="@animator/nav_default_exit_anim"/>
+
+
 
     </fragment>
     <fragment
@@ -29,10 +33,14 @@
         android:label="FindInfoFragment" >
         <action
             android:id="@+id/action_findInfoFragment2_to_userFullInformationFragment2"
-            app:destination="@id/userFullInformationFragment2" />
+            app:destination="@id/userFullInformationFragment2"
+            app:enterAnim="@animator/nav_default_enter_anim"
+            app:exitAnim="@animator/nav_default_exit_anim"/>
         <action
             android:id="@+id/action_findInfoFragment2_to_homeFragment"
-            app:destination="@id/homeFragment" />
+            app:destination="@id/homeFragment"
+            app:enterAnim="@animator/nav_default_enter_anim"
+            app:exitAnim="@animator/nav_default_exit_anim"/>
     </fragment>
     <fragment
         android:id="@+id/userFullInformationFragment2"
@@ -40,6 +48,8 @@
         android:label="UserFullInformationFragment" >
         <action
             android:id="@+id/action_userFullInformationFragment2_to_findInfoFragment2"
-            app:destination="@id/findInfoFragment2" />
+            app:destination="@id/findInfoFragment2"
+            app:enterAnim="@animator/nav_default_enter_anim"
+            app:exitAnim="@animator/nav_default_exit_anim"/>
     </fragment>
 </navigation>
